# triangle_raycasting

./: CMakeLists.txt  README.md  colors.txt  lights.txt  lights_copy.txt  triangles.txt  vertices.txt
models/cat/: colors.txt  triangles.txt
models/cube/: colors.txt  triangles.txt  vertices.txt
models/orc/: colors.txt  triangles.txt  vertices.txt
models/sleeper/: colors.txt  triangles.txt  vertices.txt
models/triangles/: colors.txt  vertices.txt
src/: Camera (copy).h  Camera.cuh  Camera.h  CleanupCommand.cuh  Color.cuh  Color.h  CpuRayCaster.h  FpsController.h  GlBasicRenderer.h  GpuRayCaster.cuh  GpuRayCaster.h  Hitable.h  IndexMeshLoader.h  LightsLoader.h  Matrix3f.cuh  Matrix3f.h  MeshLoader.h  ObjMeshLoader.h  RayCaster.h  Renderer.h  ScopedPtr.cuh  ScopedPtr.h  SimpleLightsLoader.h  TriangleMesh.h  TriangleMeshScopedPtr.cuh  Vector3f.cuh  Vector3f.h  kernels.cu  kernels.cuh  main.cu  raycasting.cu  raycasting.cuh  readFileUtils.h  utils.cu  utils.cuh
